# Copyright © 2019 Christian Persch
#
# This programme is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# This programme is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this programme.  If not, see <https://www.gnu.org/licenses/>.

# Documentation

help_media = [
  'figures/camelot-goal.png',
  'figures/clock-rules.png',
]

help_pages = [
  'accordion.xml',
  'agnes.xml',
  'athena.xml',
  'auld_lang_syne.xml',
  'aunt_mary.xml',
  'australian_patience.xml',
  'backbone.xml',
  'bakers_dozen.xml',
  'bakers_game.xml',
  'bear_river.xml',
  'beleaguered_castle.xml',
  'block_ten.xml',
  'bristol.xml',
  'camelot.xml',
  'canfield.xml',
  'carpet.xml',
  'chessboard.xml',
  'clock.xml',
  'cover.xml',
  'cruel.xml',
  'definitions.xml',
  'diamond_mine.xml',
  'doublets.xml',
  'eagle-wing.xml',
  'easthaven.xml',
  'eight_off.xml',
  'elevator.xml',
  'eliminator.xml',
  'escalator.xml',
  'first_law.xml',
  'fortress.xml',
  'fortunes.xml',
  'forty_thieves.xml',
  'fourteen.xml',
  'freecell.xml',
  'gaps.xml',
  'gay_gordons.xml',
  'giant.xml',
  'glenwood.xml',
  'gold_mine.xml',
  'golf.xml',
  'gypsy.xml',
  'hamilton.xml',
  'helsinki.xml',
  'hopscotch.xml',
  'index.docbook',
  'isabel.xml',
  'jamestown.xml',
  'jumbo.xml',
  'kansas.xml',
  'king_albert.xml',
  'kings_audience.xml',
  'klondike.xml',
  'labyrinth.xml',
  'lady_jane.xml',
  'legal.xml',
  'maze.xml',
  'monte_carlo.xml',
  'napoleons_tomb.xml',
  'neighbor.xml',
  'odessa.xml',
  'osmosis.xml',
  'peek.xml',
  'pileon.xml',
  'plait.xml',
  'poker.xml',
  'quatorze.xml',
  'royal_east.xml',
  'saratoga.xml',
  'scorpion.xml',
  'scuffle.xml',
  'seahaven.xml',
  'sir_tommy.xml',
  'spider.xml',
  'spider_three_decks.xml',
  'spiderette.xml',
  'straight_up.xml',
  'streets_and_alleys.xml',
  'ten_across.xml',
  'terrace.xml',
  'thieves.xml',
  'thirteen.xml',
  'thumb_and_pouch.xml',
  'treize.xml',
  'triple_peaks.xml',
  'union_square.xml',
  'valentine.xml',
  'wall.xml',
  'westhaven.xml',
  'whitehead.xml',
  'will_o_the_wisp.xml',
  'yield.xml',
  'yukon.xml',
  'zebra.xml',
]

gnome.yelp(
  'aisleriot',
  media: help_media,
  sources: help_pages,
)

# Man page

install_data(
  'sol.6',
  install_dir: ar_mandir / 'man6',
)
