sounddir=$(datadir)/gnome-games/sounds

sound_DATA = \
	appear.ogg  \
	die.ogg \
	gobble.ogg \
	lines1.ogg \
	reverse.ogg \
	turn.ogg \
	bad.ogg \
	flip-piece.ogg \
	land.ogg \
	lines2.ogg \
	slide.ogg \
	victory.ogg \
	bonus.ogg \
	gameover.ogg \
	laughter.ogg \
	lines3.ogg \
	splat.ogg \
	yahoo.ogg \
	crash.ogg \
	gnometris.ogg \
	life.ogg \
	pop.ogg \
	teleport.ogg

EXTRA_DIST = $(sound_DATA)
