NULL =

sounddir = $(pkgdatadir)/sounds

sound_DATA = \
	appear.ogg  \
	bad.ogg \
	bonus.ogg \
	click.ogg \
	crash.ogg \
	die.ogg \
	flip-piece.ogg \
	gameover.ogg \
	gnometris.ogg \
	gobble.ogg \
	land.ogg \
	laughter.ogg \
	life.ogg \
	lines1.ogg \
	lines2.ogg \
	lines3.ogg \
	pop.ogg \
	reverse.ogg \
	slide.ogg \
	splat.ogg \
	teleport.ogg \
	turn.ogg \
	victory.ogg \
	yahoo.ogg \
	$(NULL)

EXTRA_DIST = $(sound_DATA)
