include $(top_srcdir)/gnome-doc-utils.make

NULL =

DOC_LINGUAS = ca de el es eu fr oc ru sv

DOC_MODULE = aisleriot

DOC_ENTITIES = \
	accordion.xml \
	agnes.xml \
	athena.xml \
	auld_lang_syne.xml \
	backbone.xml \
	bakers_dozen.xml \
	bakers_game.xml \
	bear_river.xml \
	beleaguered_castle.xml \
	block_ten.xml \
	bristol.xml \
	camelot.xml \
	canfield.xml \
	carpet.xml \
	chessboard.xml \
	clock.xml \
	cover.xml \
	cruel.xml \
	definitions.xml \
	diamond_mine.xml \
	doublets.xml \
	eagle-wing.xml \
	easthaven.xml \
	eight_off.xml \
	elevator.xml \
	escalator.xml \
	first_law.xml \
	fortress.xml \
	fortunes.xml \
	forty_thieves.xml \
	fourteen.xml \
	freecell.xml \
	gaps.xml \
	gold_mine.xml \
	gay_gordons.xml \
	giant.xml \
	glenwood.xml \
	golf.xml \
	gypsy.xml \
	helsinki.xml \
	hopscotch.xml \
	isabel.xml \
	jamestown.xml \
	jumbo.xml \
	kansas.xml \
	king_albert.xml \
	kings_audience.xml \
	klondike.xml \
	labyrinth.xml \
	lady_jane.xml \
	legal.xml \
	maze.xml \
	monte_carlo.xml \
	napoleons_tomb.xml \
	neighbor.xml \
	odessa.xml \
	osmosis.xml \
	peek.xml \
	pileon.xml \
	plait.xml \
	poker.xml \
	quatorze.xml \
	royal_east.xml \
	saratoga.xml \
	scorpion.xml \
	scuffle.xml \
	seahaven.xml \
	sir_tommy.xml \
	spiderette.xml \
	spider.xml \
	spider_three_decks.xml \
	straight_up.xml \
	streets_and_alleys.xml \
	ten_across.xml \
	terrace.xml \
	thieves.xml \
	thirteen.xml \
	thumb_and_pouch.xml \
	treize.xml \
	triple_peaks.xml \
	union_square.xml \
	valentine.xml \
	westhaven.xml \
	whitehead.xml \
	will_o_the_wisp.xml \
	yield.xml \
	yukon.xml \
	zebra.xml \
	$(NULL)

DOC_FIGURES = \
	figures/camelot-goal.png \
  	figures/clock-rules.png \
	$(NULL)

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
